Fix: Make product-work subfolders visible

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,22 @@
-# User content - Ignore everything in product-work and tasks EXCEPT .gitkeep
-product-work/**/*
-!product-work/**/.gitkeep
-tasks/**/*
-!tasks/**/.gitkeep
+# User content
+# Ignore everything in product-work
+product-work/*
+# Allow subdirectories so git looks inside
+!product-work/*/
+# Ignore everything inside subdirectories
+product-work/*/*
+# Exception for .gitkeep
+!product-work/*/.gitkeep
+
+# Ignore everything in tasks
+tasks/*
+# Allow subdirectories
+!tasks/*/
+# Ignore everything inside subdirectories
+tasks/*/*
+# Exception for .gitkeep
+!tasks/*/.gitkeep
+!tasks/.gitkeep
 
 # System files
 .DS_Store
